plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

//snapshot version support
repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

compileJava {
	options.compilerArgs += ['-parameters']
}

ext {
	set('springAiVersion', "1.0.0-M2")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'com.opencsv:opencsv:5.5.2'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	// Jackson
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.core:jackson-annotations'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'com.mysql:mysql-connector-j'
	// H2 Database
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	compileOnly 'org.projectlombok:lombok:1.18.34'
	annotationProcessor 'org.projectlombok:lombok:1.18.34'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.google.truth:truth:1.1.3'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// Spring Boot DevTools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.apache.commons:commons-pool2:2.11.1' // 添加 commons-pool2 依赖
	// elastic search
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	// Spring AI
	implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT")
	implementation 'org.springframework.ai:spring-ai-tika-document-reader'
	// OpenAI
	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
	// Chroma Vector DB
	implementation 'org.springframework.ai:spring-ai-chroma-store-spring-boot-starter'
	// MQ
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	//Websocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}